[Features] Register Feature Service
Also make it available to ServiceLoader